--- a/src/componentes/home/home.scss
+++ b/src/componentes/home/home.scss
@@ -6,8 +6,7 @@
   grid-template-columns: repeat(auto-fill, minmax(13.2rem, 1fr));
   grid-gap: 1.2rem;
   margin-top: 1rem;
-  margin-left: 1rem; /* Margen a la izquierda */
-  margin-right: 1rem;
+  padding-left: 5%;
 }
 
 .rounded-image {
@@ -24,6 +23,7 @@
   //height: max-content;
   width: 13.2rem;
   border-radius: 0.5rem;
+  flex-wrap: wrap;
   background-color: WHITE; /* Add this line to set the background color to red */
 }
 .image{
