--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -46,4 +46,126 @@ h1{
   }
 }
 
+.agro-nav{
+    display: flex !important;
+    justify-content: space-around !important;
+    background-color: white;
+}
+.agro-header{
+    margin-left: 1rem !important;
+    margin-right: 1rem !important; 
+}
+
+
+.nav-underline{
+    color: #2A7D2E;
+    --bs-nav-underline-link-active-color: #2A7D2E;
+    font-weight: bold;
+    font-size: 2vh;
+}
+
+.nav-link.active{
+    color: #2A7D2E !important;
+}
+
+.nav-underline .nav-link{
+    color: #464E47;
+}
+.nav-link:focus, .nav-link:hover{
+    color:  #2A7D2E !important;
+}
+
+.nav-underline .nav-link.active{
+    color: #2A7D2E !important;
+}
+
+h1{
+    color: #464E47 !important;
+    /* margin-left: 1%; */
+    width: 10%;
+    margin: 0%; 
+    width: 100%;
+    margin-left: 0.5rem  !important ;
+    margin-bottom: 0 !important;
+    font-size: 4vh !important;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+}
+
+.navbar-brand{
+    display: flex;
+    align-items: center;
+}
+
+.navbar>.container{
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.dropdown{
+    margin-left: 0.5rem;
+}
+
+.user-info-item{
+    display: flex;
+    align-items: center;
+
+}
+
+
+
+.dropdown-menu.show{
+    background-color: #2A7D2E !important;
+    margin-top: 1rem !important;
+}
+
+.dropdown-item{
+    color: white !important;
+    display: flex !important;
+    justify-content: flex-start;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.dropdown-item:hover {
+    background-color: #F1FFFA !important;
+    color:#464E47 !important;
+}
+
+.dropdown-divider{
+    border-color: white !important;
+}
+
+.btn-container{
+    display: flex;
+}
+
+.btn-outline-primary{
+    color: #2A7D2E !important;
+    background-color: white !important;
+    border-color: #2A7D2E !important;
+    border-radius: 16px !important;
+    border: solid 2px !important;
+    font-size: 1.4rem;
+    margin: 0.5rem;
+}
+
+.btn-outline-primary:hover{
+    background-color: #2A7D2E !important;
+    border-color: #2A7D2E !important;
+    color: white  !important;
+}
+
+@media (min-width: 1400px){
+    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        max-width: 1810px !important;
+    }
+
+}
+
+@media (min-width: 100px) and (max-width: 1400px)
+{.container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 1370px  !important;}
+}
+
 
