fix: loader position

--- a/src/componentes/reusable/loader/loader.scss
+++ b/src/componentes/reusable/loader/loader.scss
@@ -19,7 +19,7 @@
   border-radius: 50%;
   border-top: 20px solid transparent;
   width: 10rem;
-  height: 10rem;
+  //height: 10rem;
   animation: spinner 3s linear infinite;
   top: 25%;
   position: relative;
