fix: loader position

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -65,8 +65,8 @@ $light-gray-dropdown:#ced4da;
 }
 
 .fondoGris{
-    // min-height: 100vh;
-    // height: 40rem;
-    // min-width: 80rem;
+    min-height: 100vh;
+    height: 40rem;
+    min-width: 80rem;
     background-color: $light-gray; 
 }
