--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -74,7 +74,7 @@
     justify-content: space-between;
 }
 
-.image-text {
+.image-text-agro {
   position: relative;
   top: 50%;
   left: 50%;
@@ -89,17 +89,17 @@
   font-family: "Inter", sans-serif;
 }
 
-.image-title{
+.image-title-agro{
   font-size: 3rem; 
   color: white;
   font-weight: bold;
   font-family: "Inter", sans-serif;
 }
 
-.image-text2{
+.image-text2-agro{
   font-size: 2rem; 
   color: white;
-  width: 40rem;
+  width: 41rem;
   font-family: "Inter", sans-serif;
 }
 
@@ -240,6 +240,11 @@
 }
 
 // CONTACT US
+.app-name{
+  width: auto;
+}
+
+
 .center{
   align-items: center;
   justify-content: center;
