--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -66,7 +66,7 @@ $light-gray-dropdown:#ced4da;
 
 .fondoGris{
     min-height: 100vh;
-    height: 40rem;
+    //height: 40rem;
     min-width: 80rem;
     background-color: $light-gray; 
 }
