--- a/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
+++ b/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
@@ -29,19 +29,19 @@
 @media (max-width: 1200px)
 {.col-lg-3 {
     flex: 0 0 auto;
-    width: 33%;}
+    width: 33% !important;}
 }
 
 @media (min-width: 300px) and (max-width: 1000px)
 {.col-lg-3 {
     flex: 0 0 auto;
-    width: 50%;}
+    width: 50% !important;}
 }
 
 @media (max-width: 600px) 
 {.col-lg-3 {
     flex: 0 0 auto;
-    width: 100%;}
+    width: 100% !important;}
 }
 
 .row{
