--- a/src/componentes/home/home.scss
+++ b/src/componentes/home/home.scss
@@ -78,8 +78,8 @@
   width: 70vw;
   margin: 1rem 1rem;
   padding: 1rem;
-  display: flex;
-  flex-direction: row;
+  display: flex !important;
+  flex-direction: row !important;
   align-items: stretch;
   justify-content: space-between;
   border-color: #48BF84;
@@ -102,4 +102,50 @@ h3{
 }
 a{
    text-decoration: none;
+}
+
+
+/////////////////NO CAMPO CARD
+.card-no-campo{
+    flex-direction: row-reverse !important ;
+    align-items: center;
+    /* width: 80%; */
+    margin: 5rem;
+    filter: drop-shadow(10px 10px 10px rgb(168, 168, 168));
+}
+
+.campito{
+    border-radius: 0.375rem;
+}
+
+.card-header-no-campo{
+    background-color: white;
+}
+
+.card-title-no-campo{
+    color: #464E47 !important;
+    font-weight: bold !important;
+    font-size: 2.5rem !important;
+    margin-bottom: 1rem !important;
+}
+
+.card-text-no-campo{
+    color: #2A7D2E;
+    font-size: 1.8rem;
+}
+
+.btn-primary{
+    color: white !important;
+    background-color: #2A7D2E !important;
+    border-color: #2A7D2E !important;
+    border-radius: 16px !important;
+    border: solid 2px !important;
+    font-size: 1.4rem;
+    margin: 0.5rem;
+}
+
+.btn-primary:hover{
+    background-color:  white !important;
+    border-color: #2A7D2E !important;
+    color: #2A7D2E  !important;
 }
