feat: editar button in dashs page

--- a/src/componentes/home/home.scss
+++ b/src/componentes/home/home.scss
@@ -140,8 +140,8 @@ a{
     border-color: #2A7D2E !important;
     border-radius: 16px !important;
     border: solid 2px !important;
-    font-size: 1.4rem;
-    margin: 0.5rem;
+    font-size: 1.4rem !important;
+    margin: 0.5rem !important;
 }
 
 .btn-primary:hover{
