--- a/src/componentes/reusable/card/card.scss
+++ b/src/componentes/reusable/card/card.scss
@@ -9,8 +9,7 @@
     margin: 1rem 1rem;
     padding: 1rem;
     width: 70vw;
-    display: flex;
-    flex-direction: column;
+    //flex-direction: column;
     align-items: stretch;
 }
 
@@ -45,8 +44,6 @@
     background-color: #F1FFFA;
     box-shadow: 0 2px 8px rgba(0,0,0,0.26) ;
     border-radius: 10px;
-    align-content: center;
-    align-self: center;
-    
+    align-content: center;    
 }
   
