--- a/src/componentes/reusable/mapContainer/mapContainer.scss
+++ b/src/componentes/reusable/mapContainer/mapContainer.scss
@@ -31,8 +31,8 @@
   text-align: left;
   font-size: 2vh;
   display: flex;
-      align-items: stretch;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .agregar-campo-label-edit{
@@ -40,7 +40,7 @@
   text-align: left;
   font-size: 2vh;
   display: flex;
-      align-items: baseline;
+  align-items: baseline;
   justify-content: space-between;
 }
 
@@ -88,7 +88,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 80vh;  
+  height: 77vh;  
 }
 
 .botones {
