fix: css broken

--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -79,10 +79,9 @@ h1{
     color: #2A7D2E !important;
 }
 
-h1{
+.header-title{
     color: #464E47 !important;
     /* margin-left: 1%; */
-    width: 10%;
     margin: 0%; 
     width: 100%;
     margin-left: 0.5rem  !important ;
