--- a/src/componentes/iniciarSesion/iniciarSesion.scss
+++ b/src/componentes/iniciarSesion/iniciarSesion.scss
@@ -83,8 +83,8 @@
 .agroia2{
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-bottom: 2.5rem;
-    margin-left: 8.5rem;
 }
 
 .agroia2:hover{
@@ -97,17 +97,29 @@
 }
 
 .title-inicio{
-    font-size: 1.5rem; 
-    font-family: "Inter", sans-serif; 
-    text-align: center;
+    font-size: 1.5rem !important; 
+    font-family: "Inter", sans-serif !important; 
+    text-align: center !important;
     color: $gris-texto;
+    width: auto;
 }
 
 .title-inicio2{
-    font-size: 2.5rem; 
-    font-family: "Inter", sans-serif; 
+    font-size: 2.5rem !important; 
+    font-family: "Inter", sans-serif !important;  
     text-align: center;
     color: $gris-texto;
     font-weight: bold;
     margin-top: 2rem;
+}
+
+.header-title{
+    color: #464E47 !important;
+    /* margin-left: 1%; */
+    margin: 0%; 
+    width: auto;
+    margin-left: 0.5rem  !important ;
+    margin-bottom: 0 !important;
+    font-size: 4vh !important;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
