feat: new design in dashs

--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -92,6 +92,7 @@
   border-radius: 0.5rem;
   background-color: white;
   margin: 1%;
+  flex-direction: row !important;
 }
 
 .cards-wrapper-diagnostico {
