--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -12,7 +12,7 @@
   background-color: transparent !important;
   border: 0px !important;
   width: auto !important;
-  display: flex !important;
+  display: inline-flex !important;
 }
 
 .dropdown-container {
