--- a/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
+++ b/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
@@ -7,9 +7,11 @@
 
 
 .card-container{
-    margin: 2rem;
+    margin: 1rem;
     /* width: 18rem; */
     text-align: initial;
+    //width: max-content;
+    height: max-content;
 }
 
 
@@ -26,22 +28,35 @@
     justify-content: flex-end;
 }
 
-@media (max-width: 1200px)
-{.col-lg-3 {
+@media (min-width: 1000px) and  (max-width: 1200px){
+.col-lg-3 {
     flex: 0 0 auto;
-    width: 33% !important;}
+    width: 33% !important;
 }
 
-@media (min-width: 300px) and (max-width: 1000px)
-{.col-lg-3 {
-    flex: 0 0 auto;
-    width: 50% !important;}
+
+
 }
 
-@media (max-width: 600px) 
+@media (min-width: 500px) and (max-width: 1000px)
 {.col-lg-3 {
     flex: 0 0 auto;
-    width: 100% !important;}
+    width: 50% !important;
+}
+
+.card-container{
+    margin: 4rem;
+}
+}
+
+@media (max-width: 500px) {
+.col-lg-3 {
+    flex: 0 0 auto;
+    width: 100% !important;
+}
+    .card-container{
+        margin:  0 20rem  0 20rem;
+    }
 }
 
 .row{
