--- a/src/componentes/iniciarSesion/iniciarSesion.scss
+++ b/src/componentes/iniciarSesion/iniciarSesion.scss
@@ -113,13 +113,6 @@
     margin-top: 2rem;
 }
 
-.header-title{
-    color: #464E47 !important;
-    /* margin-left: 1%; */
-    margin: 0%; 
+.t-login{
     width: auto;
-    margin-left: 0.5rem  !important ;
-    margin-bottom: 0 !important;
-    font-size: 4vh !important;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
