--- a/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
+++ b/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
@@ -45,7 +45,7 @@
 }
 
 .card-container{
-    margin: 4rem;
+    margin: 1rem;
 }
 }
 
@@ -55,10 +55,11 @@
     width: 100% !important;
 }
     .card-container{
-        margin:  0 25rem  0 25rem;
+        margin:  0 5rem  0 5rem;
     }
 }
 
 .row{
   justify-content: center;
+  margin-top: 1rem;
 }
