--- a/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
+++ b/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
@@ -4,8 +4,6 @@
     //margin: 0.5rem;
 }
 
-
-
 .card-container{
     margin: 1rem;
     /* width: 18rem; */
@@ -14,10 +12,13 @@
     height: max-content;
 }
 
+.card-home{
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
 
 .card-home:hover{
-    background-color: #c2c0c0;
     cursor: pointer;
+    transform: scale(1.05);
 }
 
 .card-footer{
