feat: select deleted

--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -392,5 +392,5 @@
 
 .option-select:hover{
     background-color:$main-green !important;
-    color: white !important;
+    //color: white !important;
 }
