--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -113,6 +113,14 @@ $light-gray-dropdown:#ced4da;
     filter: drop-shadow(7px 7px 7px rgb(197, 197, 197));
 }
 
+.card-container{
+    margin: 1rem;
+    /* width: 18rem; */
+    text-align: initial;
+    //width: max-content;
+    height: max-content;
+}
+
 
 /////TITULOS
 .agregar-campo-titulo {
@@ -133,3 +141,12 @@ $light-gray-dropdown:#ced4da;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
+//ANIMATIONS
+.agrandar{
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.agrandar:hover{
+     cursor: pointer;
+    transform: scale(1.05);
+}
