--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -436,3 +436,8 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+.form-check-input:checked{
+  background-color: $main-green !important;
+  border-color: $main-green !important;
+}
