fix: info campo

--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -428,6 +428,7 @@
 
 .info-mapa{
   justify-content: space-between !important;
+  flex-direction: column !important;
   margin: 1rem;
   width: 30rem;
 }
