--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -74,7 +74,7 @@
 }
 
 .dropdown-item:hover {
-    background-color: #F1FFFA !important;
+    background-color: $verde-clarito !important;
     color:#464E47 !important;
 }
 
