--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -32,7 +32,7 @@ h6{
 .rounded-dropdown {
   border-radius: 0.3rem; 
   padding: 0.2rem 1rem;
-  background-color: $verde-clarito ;
+  background-color: $verde-clarito !important ;
   border: 1px solid $light-gray-dropdown;
   color: $gray-dropdown;
   font-size: 0.75rem;
