--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -43,7 +43,16 @@ h6{
     width: 100%;
 }
 .drop-but-container{
+  position: relative;
+  padding: 0;
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  width: 80rem;
+  margin: 1.5rem auto !important;
+  min-width: 80rem;
 }
 .buttons-container {
   display: flex;
@@ -51,8 +60,11 @@ h6{
 }
 
 .dropdown-container {
+  position: absolute;
+  top: 0;
+  right: 0;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
 }
 
