--- a/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
+++ b/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
@@ -8,6 +8,7 @@
 
 .card-home{
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    height: 33rem !important;
 }
 
 .card-home:hover{
