--- a/src/componentes/reusable/mapContainer/mapContainer.scss
+++ b/src/componentes/reusable/mapContainer/mapContainer.scss
@@ -153,7 +153,7 @@
   background-color: $verde-clarito;
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-bottom: 1rem;
+  //margin-bottom: 1rem;
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   border: 1px $inputbox-border-gray;
