fix: cards padding

--- a/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
+++ b/src/componentes/reusable/campoInfoCard/campoInfoCard.scss
@@ -4,7 +4,9 @@
     //margin: 0.5rem;
 }
 
-
+.campo-info-header{
+    padding: 0 !important;
+}
 
 .card-home{
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
