--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -106,7 +106,7 @@
 
 // COLUMNS
 
-.flexbox-container {
+.agro-flexbox-container {
 	display: -ms-flex;
 	display: -webkit-flex;
 	display: flex;
@@ -116,7 +116,7 @@
   margin-bottom: 2.6rem;
 }
 
-.flexbox-container > div {
+.agro-flexbox-container > div {
 	width: 30rem;
 	padding: 0.78rem;
   background: #fff;
@@ -126,11 +126,11 @@
   justify-content: center;
 }
 
-.flexbox-container > div:first-child {
-	margin-right: 0.78rem;
-}
+// .agro-flexbox-container > div:first-child {
+// 	margin-right: 0.78rem;
+// }
 
-.flexbox-container > div + div {
+.agro-flexbox-container > div + div {
   border-left: 0.078rem solid #ccc;
   padding-left: 1.56rem;
 }
@@ -138,9 +138,9 @@
 // TEXTS
 .green-title{
   color: $main-green;
-  font-size: 2.2rem; 
-  font-weight: bold;
-  font-family: "Inter", sans-serif;
+  font-size: 2.2rem !important; 
+  font-weight: bold !important;
+  font-family: "Inter", sans-serif !important;
 }
 
 .gray-title{
@@ -156,7 +156,7 @@
   width: 35rem;
   font-size: 1.5rem; 
   font-family: "Inter", sans-serif;
-  margin: 0.19rem 0;
+  //margin: 0.19rem 0;
 }
 
 .text-home-principal2{
@@ -164,7 +164,7 @@
   width: 35rem;
   font-size: 1.2rem; 
   font-family: "Inter", sans-serif;
-  margin: 0.19rem 0;
+  //margin: 0.19rem 0;
 }
 
 // GRAY BOX
