--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -138,9 +138,10 @@
 // TEXTS
 .green-title{
   color: $main-green;
-  font-size: 2.2rem !important; 
+  font-size: 2rem !important; 
   font-weight: bold !important;
   font-family: "Inter", sans-serif !important;
+  line-height: 2.5rem;
 }
 
 .gray-title{
