--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -137,7 +137,7 @@
 
 // TEXTS
 .green-title{
-  color: $main-green;
+  color: $main-green !important;
   font-size: 2rem !important; 
   font-weight: bold !important;
   font-family: "Inter", sans-serif !important;
@@ -145,26 +145,28 @@
 }
 
 .gray-title{
-  color: $gris-texto;
+  color: $gris-texto !important;
   width: 40rem;
-  font-size: 2.2rem; 
+  font-size: 2rem; 
   font-weight: bold;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif !important;
+  line-height: 2rem;
 }
 
 .text-home-principal{
   color: $gris-texto;
   width: 35rem;
-  font-size: 1.5rem; 
-  font-family: "Inter", sans-serif;
+  font-size: 1.3rem !important; 
+  font-family: "Inter", sans-serif !important;
   //margin: 0.19rem 0;
+   line-height: 1.7rem;
 }
 
 .text-home-principal2{
-  color: $gris-texto;
+  color: $gris-texto !important;
   width: 35rem;
   font-size: 1.2rem; 
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif !important;
   //margin: 0.19rem 0;
 }
 
