--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -166,7 +166,7 @@
   width: 35rem;
   font-size: 1.2rem; 
   font-family: "Inter", sans-serif !important;
-  //margin: 0.19rem 0;
+  margin: 0.19rem 0;
 }
 
 // GRAY BOX
