--- a/src/componentes/reusable/card/card.scss
+++ b/src/componentes/reusable/card/card.scss
@@ -35,7 +35,7 @@
    max-width: 100vw;
 }
 
-.card{
+.agro-card{
     background-color: #F1FFFA;
     box-shadow: 0 2px 8px rgba(0,0,0,0.26) ;
     border-radius: 10px;
