--- a/src/componentes/reusable/errorFolder/error.scss
+++ b/src/componentes/reusable/errorFolder/error.scss
@@ -1,35 +1,35 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 10;
-    background: rgba(0, 0, 0, 0.75);
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100vh !important;
+    z-index: 10 !important;
+    background: rgba(0, 0, 0, 0.75) !important;
   }
   
-  .modal {
-    position: fixed;
-    top: 30vh;
-    left: 10%;
-    width: 80%;
-    z-index: 100;
-    overflow: hidden;
+  .agro-modal {
+    position: fixed !important;
+    top: 30vh !important;
+    left: 10% !important;
+    width: 80% !important;
+    z-index: 100 !important;
+    overflow: hidden !important;
   }
   
   .header-error {
-    background: #439775; 
+    background: #439775 !important; 
   }
   
   .header-error h2 {
-    color: white;
+    color: white !important;
     text-align: center;
     margin: auto;
 
   }
   
   .content {
-    padding: 1rem;
+    padding: 1rem !important;
     font-size: 2vh;
   }
   
@@ -41,7 +41,7 @@
   
   @media (min-width: 768px) {
     .modal {
-      left: calc(50% - 20rem);
-      width: 40rem;
+      left: calc(50% - 20rem) !important;
+      width: 40rem !important;
     }
   }
