--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -55,19 +55,21 @@
 //BOTON DEL ERROR
 .button {
     font: inherit;
-    border: 1px solid #439775;
-    background: #439775;
+    border: 2px solid $main-green;
+    background: $main-green;
     color: white;
     padding: 0.25rem 1rem;
     cursor: pointer;
     border-radius: 5px;
     margin-top: 0.5rem;
+    font-size: 1.5rem;
   }
   
   .button:hover,
   .button:active {
-    background: #439775;
-    border-color: #439775;
+    background: white;
+    border-color: $main-green;
+    color: $main-green;
   }
   
   .button:focus {
